fix bugs
get the error interceptor in anguler after i find the error because anguler new version registered the interceptor new way
